small change in package description

--- a/debian/control
+++ b/debian/control
@@ -17,4 +17,4 @@ Description: Breton language dictionary for hunspell
  spellchecker (currently supported by Mozilla and LibreOffice).
  It is based on the original Breton wordlist created by Philippe
  Basciano-Le Gall for Korvigelloù an Drouizig (http://www.drouizig.org).
- MS Word uses the same wordlist.
+ An Drouizig Difazier uses the same wordlist.
